# AIJent

./: README.md  app_gradio.py  database.py  embedding_mcp_server.py  hiring_cafe_scraper (1).py  hiring_cafe_scraper.py  main.py  models.py  parser_mcp_server.py  playground.ipynb  playground.py  pyproject.toml
Embedder/: embedding_mcp_server.py
Resume_parser/: parser_mcp_server.py  playground.ipynb
